objects/ASI_NPP_Route_Type__c.object
<CustomObject>
    <fields>
        <fullName>ASI_NPP_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_NPA_Route_Types1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_NPA_Route_Types2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Approver_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 4</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_NPA_Route_Types3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ASI NPA Route Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_NPP_Approver_2__c</columns>
        <columns>ASI_NPP_Approver_3__c</columns>
        <columns>ASI_NPP_Approver_4__c</columns>
        <columns>ASI_NPP_Approver_5__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>Market</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASI NPA Route Types</pluralLabel>
    <recordTypes>
        <fullName>ASI_NPP_SG_Route_Type</fullName>
        <active>true</active>
        <label>SG Route Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>